src/components/Progressbar/Progressbar.css
.progressbar {
  width: 100%;
  height: 36px;
  margin-bottom: 123px;
  display: grid;
  grid-template-columns: minmax(100px, 1fr) 4fr;
}
.progressbar__backend {
  color: #000000;
  background-color: #5594FE;
  font-family: Inter, Helvetica, Arial, Ubuntu, sans-serif;
  font-style: normal;
  font-weight: normal;
  font-size: 14px;
  line-height: 2.3;
  text-align: center;
  position: relative;
  display: grid;
}
.progressbar__backend::after {
  content: 'Back-end';
  color: #8B8B8B;
  position: absolute;
  top: 37px;
  align-self: center;
  justify-self: center;
}
.progressbar__frontend {
  color: #ffffff;
  background-color: #303030;
  font-family: Inter, Helvetica, Arial, Ubuntu, sans-serif;
  font-style: normal;
  font-weight: normal;
  font-size: 14px;
  line-height: 2.3;
  text-align: center;
  position: relative;
  display: grid;
}
.progressbar__frontend::after {
  content: 'Front-end';
  color: #8B8B8B;
  position: absolute;
  top: 37px;
  align-self: center;
  justify-self: center;
}
@media screen and (max-width: 1279px) {
  .progressbar {
    margin-bottom: 121px;
  }
}
@media screen and (max-width: 769px) {
  .progressbar {
    height: 35px;
    margin-bottom: 93px;
  }
  .progressbar__backend {
    font-size: 11px;
    line-height: 3.18;
  }
  .progressbar__frontend {
    font-size: 11px;
    line-height: 3.18;
  }
}

